Add version footer to debug deployment

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,10 @@
                 <p id="confidence-text"></p>
             </div>
         </main>
+        </main>
+        <footer>
+            <p>Version 1.1 - Debug Mode</p>
+        </footer>
     </div>
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
